2004-10-20  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_convert.c: Implemented GLib::ConvertError. 

2004-10-18  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/mkmf-gnome2.rb: Added PKGConfig.modversion, .check_version?.
	PKGConfig#have_package accept major, minor micro version to check 
	the module version correctly.
	Pointed out by Kouhei Sutou.

2004-10-17  Vincent Isambart <isambart@netcourrier.com>

	* src/lib/mkmf-gnome2.rb: Renamed add_uniq_to_objs to add_obj.

2004-10-17  Vincent Isambart <isambart@netcourrier.com>

	* src/lib/mkmf-gnome2.rb: Added the add_uniq_to_objs function.

2004-09-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/glib2.rb: Renamed GLib::Log.set_error_domain to 
	GLib::Log.set_log_domain.

2004-09-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/glib2.rb: Improved log handling.
	Define GLib::ERROR_DOMAIN, GLib::Object::LOG_DOMAIN, 
	GLib::Thread::LOG_DOMAIN, GLib::Module::LOG_DOMAIN.

2004-09-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/glib2.rb: Add GLib::Log.set_error_domain for improvement
	error handling.

2004-09-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/glib2.rb: Set $KCODE to "U".

2004-08-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_enums.c: makes rbgobj_define_const to a global function.
	* src/rbglib_error.c: Fix bugs. Re-implement rbgerr_define_gerror.

2004-08-19  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_type.c: rbgobj_define_class() can define parent compulsorily.
	* src/rbgobj_param.c, rbgobj_object.c, rbgobj_boxed.c: Follow above change.

	* src/rbgerror.c, rbglib.h: Added. Replace rbgutil_gerror2exception.
	* src/rbgutil.[ch]: Removed rbgutil_gerror2exception.
	* src/rbgfileutils.c: Added for GLib::FileError.
	* src/rbgutil.c: Improved RAISE_GERROR.
	* src/rbglib.c, glib2.def: Follow these changes. 

2004-08-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.h: Increment version number.

2004-08-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_spawn.c: Fix warnings. 